--- a/cotizador_acerta/templates/reportes/cotizacion_details.html
+++ b/cotizador_acerta/templates/reportes/cotizacion_details.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %}
+{% extends "administrador/base_admin.html" %}
+{% load static %}
+{% block title %}<title>Detalle de Cotización</title>{% endblock title %}
 {% load humanize %}
 
 {# Load the tag library #}
@@ -11,146 +13,28 @@
 {# Display django.contrib.messages as Bootstrap alerts #}
 {% bootstrap_messages %}
 
-{% load static %}
 {% block extracss %}
 <link href="{% static 'plugins/iCheck/square/grey.css' %}" rel="stylesheet">
-
 <style type="text/css">
-    #titulo-login {
-        font-family: Arial;
-        font-size: 25px;
-        color: #B5B6B8;
-    }
-    #link-acerta {
-        color: #E76C42;
-    }
-    input:focus {
-        border-color: #E76C42 !important;
-        color: #E76C42 !important;
-    }
-    input:focus::-webkit-input-placeholder {
-        color: #E76C42 !important;
-    }
-    input:focus::-moz-placeholder {
-        color: #E76C42 !important;
-    }
-    input:focus:-moz-placeholder {
-        color: #E76C42 !important;
-    }
-    .panel-body {
-      line-height: 30px;
-    }
-    .panel-heading {
-        height: 40px;
-        font-size: 20px;
-        line-height: 20px !important;
-    }
-    input:focus:-ms-input-placeholder {
-        color: #E76C42 !important;
-    }
-    .login-box-body {
-        margin-left: 20%;
-        margin-right: 20%
-    }
-    .form-field {
-        margin:0px 0px 0px 20px;
-    }
-    #subtitulo {
-        font-family: Arial;
-        font-size: 13px;
-        color: #828489;
-    }
-    #subtitulo2 {
-        font-family: Arial;
-        font-size: 18px;
-        color: #B5B6B8;
-    }
-    .text-right {
-        text-align: left;
-        line-height: 30px;
-    }
-    .back {
-        color: #FFFFFF;
-        background-color: #E76C42;
-        text-align: center;
-        float: left;
-    }
-    .calculate {
-      color: #FFFFFF;
-      background-color: #727270;
-      text-align: center;
-      float: right;
-      margin-left: 10px;
-      transition: all 0.8s ease;
-    }
-    .calculate:hover {
-      background: #E76C42;
-      color: #FFFFFF;
-    }
-    .box {
-        border-top: 3px solid #E76C42 !important;
-        border-left: 2px solid #F3F3F3 !important;
-        border-right: 2px solid #F3F3F3 !important;
-        border-bottom: 2px solid #F3F3F3 !important;
-    }
-    .select {
-        color: #FFFFFF;
-        background-color: #727270;
-        text-align: center;
-        margin-left: 10px;
-    }
-    .first {
-        padding-top: 10%;
-      }
-    @media only screen and (max-width: 435px) {
-        #titulo-login {
-            font-family: Arial;
-            font-size: 15px;
-            color: #B5B6B8;
-        }
-        .calculate {
-          color: #FFFFFF;
-          background-color: #727270;
-          text-align: center;
-          margin-bottom: 2px;
-          transition: all 0.8s ease;
-        }
-        .calculate2 {
-          color: #FFFFFF;
-          background-color: #727270;
-          text-align: center;
-          float: left;
-          transition: all 0.8s ease;
-        }
-        .box {
-          font-size: 10px;
-        }
-        .first {
-          padding-top: 20%;
-        }
-    }
+  .calculate {
+    color: #FFFFFF;
+    background-color: #727270;
+    text-align: center;
+    margin-bottom: 2px;
+    transition: all 0.8s ease;
+  }
 </style>
 {% endblock extracss %}
 
+{% block titulo %}
+    <h1>
+        COTIZACIÓN
+    </h1>
+{% endblock titulo %}
 
 {% block content %}
-<div class="row">
-    <div class="col-xs-12 first">
         <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 text-center">
-                    <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
-                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
-                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12 hidden-sm hidden-md hidden-lg">
-                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="img-logo hidden-xs">
-                    <h3 id="subtitulo2" class="text-center"><strong>COTIZACIÓN</strong></h3>
-                    <br>
-                </div>
-                <div class="col-md-2"></div>
-            </div>
-            <div class="col-md-2"></div>
-            <div class="col-md-8 col-xs-12">
+            <div class="col-xs-12">
                 <div class="box">
                 <!-- <div class="box-header">
                   <h3 class="box-title">Responsive Hover Table</h3>
@@ -244,19 +128,9 @@
                         <td>{{ cotizacion.prima_endoso|floatformat:2|intcomma }}</td>
                       </tr>
                     </table>
-                    {% bootstrap_form_errors form %}
-                    <form id="form-enviar" action="" method="post" role="form" class="form-horizontal">
                     <div class="col-md-5 hidden-xs"></div>
                     <div class="row hidden-md hidden-lg"></div>
                     <div class="col-md-2 col-xs-12">
-                        <h5><br></h5>
-                        <h5><br></h5>
-                        <h5><br></h5>
-                        <h5>{% bootstrap_field form.cuotas show_label=False layout='horizontal' %}</h5>
-                        <h5><br></h5>
-                        <h5><br></h5>
-                        <h5><br></h5>
-                        {% bootstrap_field form.guardar show_label=False %}
                     </div>
                     <div class="row hidden-md hidden-lg"></div>
                     <div class="col-xs-1 hidden-md hidden-lg"></div>
@@ -265,82 +139,37 @@
                       <h5>Subtotal:</h5>
                       <h5>Impuestos:</h5>
                       <h5><strong>Total a Pagar:</strong></h5>
+                      <h5><strong>Cuotas:</strong></h5>
                       <h5><strong>Prima Mensual:</strong></h5>
                       <h5><strong>Prima Pago de Contado:</strong></h5>
                       <h5>Prima Pago ACH/Visa:</h5>
-                      <h5>Descuento</h5>
                     </div>
                     <div class="col-md-2 col-xs-4 text-right" style="text:align:left;">
                       <h5><strong>{{ cotizacion.endoso }}</strong></h5>
                       <h5>B/.{{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
                       <h5>B/.{{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
                       <h5><strong>B/.{{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
-                      <h5 id="prima-mensual" data-total="{{ cotizacion.total|floatformat:2 }}"><strong>B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
+                      <h5><strong> {{ cotizacion.cuota }}</strong></h5>
+                      <h5><strong>B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
                       <h5><strong>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
                       <h5>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
-                      <h5>{{ cotizacion.descuento|floatformat:2|intcomma }}</h5>
                     </div>
                     <br>
                     </div><!-- /.box-body -->
                     </div><!-- /.box -->
 
             </div>
-            <div class="col-md-2"></div>
         </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-10 btn-group-lg">
-          <div class="col-md-2 hidden-xs">
-            <a class="btn btn-lg back" href="{% url 'ver_planes' pk1 pk2 pk3 pk4 %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
+        <div class="row">
+          <div class="col-xs-12 text-right">
+            <a class="btn btn-lg calculate" href="{% url 'cotizaciones_list' %}">Atrás</a>
           </div>
-            <div class="col-md-8 col-xs-12">
-              {% csrf_token %}
-              <button type="submit" class="btn btn-lg calculate">
-                Enviar
-              </button>
+        </div>
 
-              <div class="row hidden-md hidden-lg"></div>
-                <button id="guardar" type="submit" class="btn btn-lg back" style="margin-left:10px; float: right;">Guardar</button>
-                </form>
-                <a class="btn btn-lg calculate calculate2" href="{% url 'vehiculo' %}">Nueva Cotización</a>
-            </div>
-            <br><br><br><br>
-            <br><br><br><br>
-          </div>
 
-          </div>
 
-    </div>
-</div>
 {% endblock content %}
 
 {% block custom_script %}
-
-<script type="text/javascript">
-
-  function addThousandsSeparator(input) {
-      var output = input
-      if (parseFloat(input)) {
-          input = new String(input); // so you can perform string operations
-          var parts = input.split("."); // remove the decimal part
-          parts[0] = parts[0].split("").reverse().join("").replace(/(\d{3})(?!$)/g, "$1,").split("").reverse().join("");
-          output = parts.join(".");
-      }
-
-      return output;
-  }
-
-  $(document).on("change", "#id_cuotas", function(){
-      var cuotas = parseInt($(this).val());
-      var total = parseInt($("#prima-mensual").data("total"));
-      var mensualidad = total / cuotas;
-      $("#prima-mensual").empty();
-      $("#prima-mensual").append("B/.  " + addThousandsSeparator(mensualidad.toFixed(2).toString()));
-  });
-  $(document).on("click", "#guardar", function(){
-      $("#id_guardar").val("guardalo");
-      $("#form-enviar").submit();
-  });
-
-</script>
 
 {% endblock custom_script %}
