--- a/cotizador_acerta/templates/administrador/base_admin.html
+++ b/cotizador_acerta/templates/administrador/base_admin.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Administrador </title>
+    {% block title %}<title>Administrador </title>{% endblock title %}
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    {% block css %}
     <!-- Bootstrap 3.3.5 -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <!-- Font Awesome -->
@@ -20,6 +21,8 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static 'dist/css/skins/_all-skins.min.css' %}">
+    {% endblock css %}
+    {% block extracss %}{% endblock extracss %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -237,17 +240,27 @@
                   </li>
                 </ul>
               </li> -->
-              <!-- User Account: style can be found in dropdown.less -->
               <li class="dropdown user user-menu">
                 <a href="{% url 'vehiculo' %}" class="dropdown-toggle">
                   <span>Volver al Cotizador</span>
                 </a>
               </li>
-              <li class="dropdown user user-menu">
-                <a href="#" class="dropdown-toggle">
+              <li class="dropdown tasks-menu">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <span class="hidden-xs">{{ user.get_full_name|default:user.username }}</span>
+                  <span class="hidden-xs fa fa-angle-down"></span>
                 </a>
+                <ul class="dropdown-menu">
+                  <li><!-- Task item -->
+                    <a href="{% url 'logout' %}">
+                      <h5>
+                        Cerrar Sesión
+                      </h5>
+                    </a>
+                  </li><!-- end task item -->
+                </ul>
               </li>
+              <!-- User Account: style can be found in dropdown.less -->
               <!-- Control Sidebar Toggle Button -->
               <!-- <li>
                 <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
@@ -283,10 +296,54 @@
           <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
-            <li class="active treeview">
-              <a href="{% url 'dashboard' %}">
-                <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+            <li class="header">NAVEGACIÓN PRINCIPAL</li>
+            {% if user.is_authenticated and user.groups.all.0.name == 'super_admin' %}
+              <li class="treeview">
+                <a href="{% url 'dashboard' %}">
+                  <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                </a>
+                <!-- <ul class="treeview-menu">
+                  <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                  <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                </ul> -->
+              </li>
+            {% endif %}
+            {% if user.is_authenticated and user.groups.all.0.name == 'super_admin' %}
+              <li class="treeview">
+                <a href="{% url 'corredor-vendedor-list' %}">
+                  <i class="fa fa-users"></i> <span>Corredores y Vendedores</span>
+                </a>
+                <!-- <ul class="treeview-menu">
+                  <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                  <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                </ul> -->
+              </li>
+            {% endif %}
+            {% if user.is_authenticated and user.groups.all.0.name == 'admin' %}
+              <li class="treeview">
+                <a href="{% url 'corredor-vendedor-list' %}">
+                  <i class="fa fa-users"></i> <span>Corredores y Vendedores</span>
+                </a>
+                <!-- <ul class="treeview-menu">
+                  <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                  <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                </ul> -->
+              </li>
+            {% endif %}
+            {% if user.is_authenticated and user.groups.all.0.name == 'corredor' %}
+              <li class="treeview">
+                <a href="{% url 'vendedor_list' %}">
+                  <i class="fa fa-users"></i> <span>Mis Vendedores</span>
+                </a>
+                <!-- <ul class="treeview-menu">
+                  <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                  <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                </ul> -->
+              </li>
+            {% endif %}
+            <li class="treeview">
+              <a href="{% url 'cotizaciones_list' %}">
+                <i class="fa fa-calculator"></i> <span>Mis Cotizaciones</span>
               </a>
               <!-- <ul class="treeview-menu">
                 <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
@@ -606,27 +663,33 @@
       <div class="control-sidebar-bg"></div>
 
     </div><!-- ./wrapper -->
-
+    {% block script %}
     <!-- jQuery 2.1.4 -->
     <script src="{% static 'plugins/jQuery/jQuery-2.1.4.min.js' %}"></script>
     <!-- Bootstrap 3.3.5 -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <!-- DataTables -->
+    <script src="{% static 'js/plugins/datatables/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static 'js/plugins/datatables/dataTables.bootstrap.min.js' %}"></script>
+    <!-- SlimScroll 1.3.0 -->
+    <script src="{% static 'plugins/slimScroll/jquery.slimscroll.min.js' %}"></script>
     <!-- FastClick -->
     <script src="{% static 'plugins/fastclick/fastclick.min.js' %}"></script>
     <!-- AdminLTE App -->
     <script src="{% static 'dist/js/app.min.js' %}"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="{% static 'dist/js/demo.js' %}"></script>
     <!-- Sparkline -->
     <script src="{% static 'plugins/sparkline/jquery.sparkline.min.js' %}"></script>
     <!-- jvectormap -->
     <script src="{% static 'plugins/jvectormap/jquery-jvectormap-1.2.2.min.js' %}"></script>
     <script src="{% static 'plugins/jvectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
-    <!-- SlimScroll 1.3.0 -->
-    <script src="{% static 'plugins/slimScroll/jquery.slimscroll.min.js' %}"></script>
     <!-- ChartJS 1.0.1 -->
-    <script src="{% static 'plugins/chartjs/Chart.min.js' %}"></script>
+    <!--<script src="{% static 'plugins/chartjs/Chart.min.js' %}"></script>-->
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="{% static 'dist/js/pages/dashboard2.js' %}"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="{% static 'dist/js/demo.js' %}"></script>
+    <!--<script src="{% static 'dist/js/pages/dashboard2.js' %}"></script-->
+    {% endblock script %}
+    {% block custom_script %}{% endblock custom_script %}
+
   </body>
 </html>
