--- a/cotizador_acerta/templates/reportes/corredor_detail.html
+++ b/cotizador_acerta/templates/reportes/corredor_detail.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "administrador/base_admin.html" %}
 {% load static %}
-
+{% block title %}<title>Cotizaciones de {{ usuario.get_full_name|default:usuario.username }}</title>{% endblock title %}
 {% block extracss %}
 <link href="{% static 'plugins/datatables/dataTables.bootstrap.css' %}" rel="stylesheet">
 <style type="text/css">
@@ -15,15 +15,15 @@
 
 {% block content %}
 
-<div class="row" style="padding-top: 10%;">
+<div class="row">
 	<div class="col-md-4" style="padding-left: 2%;">
 	<!-- Widget: user widget style 1 -->
 		<div class="box box-widget widget-user-2">
 		<!-- Add the bg color to the header using any of the bg-* classes -->
 			<div class="widget-user-header bg-orange">
 			<!-- /.widget-user-image -->
-				<h3 class="widget-user-username">{{user.first_name}} {{user.last_name}}</h3>
-				{% if user.groups.first.name == 'corredor' %}
+				<h3 class="widget-user-username">{{ usuario.get_full_name|default:usuario.username }}</h3>
+				{% if usuario.groups.first.name == 'corredor' %}
 					<h5 class="widget-user-desc">Corredor Acerta</h5>
 				{% else %}
 					<h5 class="widget-user-desc">Vendedor Acerta</h5>
@@ -31,13 +31,11 @@
 			</div>
 			<div class="box-footer no-padding">
 				<ul class="nav nav-stacked">
-					{% if user.groups.first.name == 'corredor' %}
+					{% if usuario.groups.first.name == 'corredor' %}
 						<li><a href="#">Licencia <span class="pull-right badge bg-orange">{{corredor.licencia}}</spana></a></li>
-					{% else %}
-						<li><a href="#">Licencia <a class="pull-right">N/A</a></a></li>
 					{% endif %}
-					<li><a href="#">Correo <span class="pull-right badge bg-orange">{{user.email}}</span></a></li>
-					<li><a href="#">Cotizaciones <span class="pull-right badge bg-red">12</span></a></li>
+					<li><a href="#">Correo <span class="pull-right badge bg-orange">{{usuario.email}}</span></a></li>
+					<li><a href="#">Cotizaciones <span class="pull-right badge bg-red">{{ num_cot }}</span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -60,13 +58,13 @@
 			    </tr>
 			    </thead>
 			    <tbody>
-			    {% for cotizacion in cotizaciones %}	    		
+			    {% for cotizacion in cotizaciones %}
 			    	<tr role="row">
 				      <td class="sorting_1"> {{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}</td>
 				      <td>{{ cotizacion.conductor.marca.nombre }}</td>
 				      <td>{{ cotizacion.conductor.modelo.nombre }}</td>
 				      <td> B/. {{ cotizacion.total }}</td>
-				      <td><a href="#">View</a></td>
+				      <td><a href="{% url 'cotizaciones_details' cotizacion.pk %}">Ver</a></td>
 				    </tr>
 			    {% endfor %}
 			    </tbody>
