--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -321,6 +321,16 @@
        }
     });
 
+    $("#id_identificacion").focus(function(e){
+        e.preventDefault();
+       if( $("#id_tipo_id_0").is(':checked') ){
+            $(".cedula-help").remove();
+            $("#id_identificacion").parent().before("<div class='cedula-help' style='color: #727270; margin-top: 6px; margin-bottom: 6px;'>Cédula. Ej: 12-123-1234</div>");
+       } else {
+            $(".cedula-help").remove();
+       }
+    });
+
     $(document).on("change", "#id_valor_text", function(e){
         e.preventDefault();
         var valor = /^[0-9]{1,3}(,[0-9]{3})*\.[0-9]{2}$/;
