--- a/cotizador_acerta/templates/registrations/password_reset_complete.html
+++ b/cotizador_acerta/templates/registrations/password_reset_complete.html
@@ -1,37 +1,90 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Password reset complete{% endblock %}
 
 {% block extracss %}
-<style>
 
-  body {
-    background-image: url('/static/img/backgroundLogin.jpg')
-  }
-
-</style>
 {% endblock extracss %}
+<style type="text/css">
+    #titulo-login {
+        font-family: Arial;
+        font-size: 29px;
+        color: #B5B6B8;
+    }
+    @media only screen and (max-width: 435px) {
+        #titulo-login {
+            font-family: Arial;
+            font-size: 15px;
+            color: #B5B6B8;
+        }
+    }
+    #link-acerta {
+        color: #E76C42;
+    }
+    input:focus {
+        border-color: #E76C42 !important;
+        color: #E76C42 !important;
+    }
+    input:focus::-webkit-input-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus::-moz-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus:-moz-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus:-ms-input-placeholder {
+        color: #E76C42 !important;
+    }
+    .login-box-body {
+        margin-left: 20%;
+        margin-right: 20%
+    }
+    .calculate {
+        color: #FFFFFF;
+        background-color: #727270;
+        text-align: center;
+    }
+    .calculate {
+      transition: all 0.8s ease;
+    }
+    .calculate:hover {
+      background: #E76C42;
+      color: #FFFFFF;
+    }
+    .first {
+        padding-top: 10%;
+    }
+    @media only screen and (max-width: 435px) {
+        .first {
+          padding-top: 20%;
+        }
+    }
+</style>
+{% block content %}
 
-{% block sessions %}
-
-<div class="col-xs-12 text-center">
-  <br><br><br><br>
-  <div class="col-xs-4"></div>
-  <div class="col-xs-4 panel panel-default" style="border-width: 4px; border-color: 8CA5F0;">
-    <div class="panel-body">
-        <div class="login-box">
-          <div class="login-logo">
-            <a href="#"><i class="fa fa-instagram"></i><b> Instagram</b>APP</a>
-          </div><!-- /.login-logo -->
-          <div class="login-box-body">
-            <p>Your password has been set. You may go ahead and log in now.</p>
-            <a href="{% url 'dashboard:users:login' %}" class="btn btn-primary btn-block text-center">Log In</a>
-          </div><!-- /.login-box-body -->
-        </div><!-- /.login-box -->
+<div class="row">
+    <div class="col-xs-12 first">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-4"></div>
+                <div class="col-md-4 text-center">
+                    <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+            <div class="col-xs-1 col-sm-2 col-md-4"></div>
+            <div class="col-xs-10 col-sm-8 col-md-4">
+                <div class="login-box-body">
+                    <p>Tu contraseña ha sido reestablecida</p>
+                    <a href="{% url 'login' %}" class="btn btn-primary btn-block text-center">Iniciar Sesión</a>
+                </div><!-- /.login-box-body -->
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 
-{% endblock sessions %}
+{% endblock content %}
 
