--- a/cotizador_acerta/templates/registrations/password_reset_form.html
+++ b/cotizador_acerta/templates/registrations/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "dashboard/base.html" %}
+{% extends "base.html" %}
 {# Load the tag library #}
 {% load bootstrap3 %}
 
@@ -12,46 +12,105 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block extracss %}
-<style>
-
-  body {
-    background-image: url('/static/img/backgroundLogin.jpg')
-  }
-
+<style type="text/css">
+    #titulo-login {
+        font-family: Arial;
+        font-size: 29px;
+        color: #B5B6B8;
+    }
+    @media only screen and (max-width: 435px) {
+        #titulo-login {
+            font-family: Arial;
+            font-size: 15px;
+            color: #B5B6B8;
+        }
+    }
+    #link-acerta {
+        color: #E76C42;
+    }
+    input:focus {
+        border-color: #E76C42 !important;
+        color: #E76C42 !important;
+    }
+    input:focus::-webkit-input-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus::-moz-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus:-moz-placeholder {
+        color: #E76C42 !important;
+    }
+    input:focus:-ms-input-placeholder {
+        color: #E76C42 !important;
+    }
+    .login-box-body {
+        margin-left: 20%;
+        margin-right: 20%
+    }
+    .calculate {
+        color: #FFFFFF;
+        background-color: #727270;
+        text-align: center;
+    }
+    .calculate {
+      transition: all 0.8s ease;
+    }
+    .calculate:hover {
+      background: #E76C42;
+      color: #FFFFFF;
+    }
+    .first {
+        padding-top: 10%;
+    }
+    @media only screen and (max-width: 435px) {
+        .first {
+          padding-top: 20%;
+        }
+    }
 </style>
 {% endblock extracss %}
 
-{% block sessions %}
-<div class="col-xs-12 text-center">
-  <br><br><br><br>
-  <div class="col-xs-4"></div>
-  <div class="col-xs-4 panel panel-default" style="border-width: 4px; border-color: 8CA5F0;">
-    <div class="panel-body">
-        <div class="login-box">
-          <div class="login-logo">
-            <a href="#"><i class="fa fa-instagram"></i><b> Instagram</b>APP</a>
-          </div><!-- /.login-logo -->
-          <div class="alert alert-info" role="alert">
-              <p>Please specify your email address to receive instructions for resetting it.</p>
-          </div>
-          <div class="login-box-body">
-            <form action="" method="post" role="form" class="form-horizontal">
-                {% csrf_token %}
-              <div class="form-group">
-                {% bootstrap_form form layout='horizontal' %}
+{% block content %}
 
-                <div class="row text-right">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat text-right">
-                      Reset Password
-                    </button>
+<div class="row">
+    <div class="col-xs-12 first">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-4"></div>
+                <div class="col-md-4 text-center">
+                    <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
+                    <div class="alert alert-info" role="alert">
+                        <p>Por favor especifica tu correo para reestablecer tu contraseña.</p>
+                    </div>
                 </div>
-              </div>
-              </form>
-          </div><!-- /.login-box-body -->
-        </div><!-- /.login-box -->
+                <div class="col-md-4"></div>
+            </div>
+            <div class="col-xs-1 col-sm-2 col-md-4"></div>
+            <div class="col-xs-10 col-sm-8 col-md-4">
+                {% bootstrap_form_errors form %}
+                <div class="login-box-body">
+                    <form action="" method="post" role="form" class="form-horizontal">
+                        {% csrf_token %}
+
+                        {% bootstrap_form form layout='horizontal' %}
+                        <br>
+
+                        {% buttons %}
+                            <div class="col-md-2"></div>
+                            <div class="col-sm-4 col-md-8 text-center">
+                                <button type="submit" class="btn btn-lg calculate">
+                                    ENVIAR
+                                </button>
+                            </div>
+                            <div class="col-md-2"></div>
+                        {% endbuttons %}
+                    </form>
+                </div><!-- /.login-box-body -->
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
-{% endblock sessions %}
+{% endblock content %}
 
